fixing right gap in mobile

--- a/style.css
+++ b/style.css
@@ -4,13 +4,14 @@ html, body{
 width: 100%;
 padding: 0 !important;
 margin: 0;
+overflow-x: hidden !important;
 }
 
 
 
-body{
+/*body{
 overflow-x: hidden;
-}
+}*/
 
 
 /*
